[gd_scene load_steps=5 format=2]

[ext_resource path="res://glass-shatter.mp3" type="AudioStream" id=1]
[ext_resource path="res://hammer.gd" type="Script" id=2]
[ext_resource path="res://Untitled.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.33333, 6.00003 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 5, 2.86102e-05 )
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 5, 0 )
scale = Vector2( 0.75, 1 )
shape = SubResource( 1 )

[node name="shield" type="Sprite" parent="."]
position = Vector2( 14, 0 )
rotation = 1.5708
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
volume_db = -10.0

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
volume_db = -10.0

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
volume_db = -10.0

[node name="AudioStreamPlayer2D4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
volume_db = -10.0

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
